# ARES-minisumo-robot

./: .gitignore  README.md
data_visualization_app/: .gitignore  BluetoothLogger.cpp  BluetoothLogger.h  BluetoothLogger.ui  BluetoothManager.cpp  BluetoothManager.h  BluetoothScanner.cpp  BluetoothScanner.h  BluetoothScanner.ui  CMakeLists.txt  LineChart.cpp  LineChart.h  LineChart.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MotorArrowWidget.cpp  MotorArrowWidget.h  PDW_ARES.desktop  RobotDiagram.cpp  RobotDiagram.h  RobotDiagram.ui  RobotPicture.cpp  RobotPicture.ui  RotatedLabel.h  Tof.cpp  Tof.h  Tof.ui  TofChart.cpp  TofChart.h  TofChart.ui  TofConeWidget.cpp  TofConeWidget.h  data_visualization_app_de_DE.ts  data_visualization_app_en_EN.ts  data_visualization_app_pl_PL.ts  main.cpp  mainwindow.cpp  mainwindow.h  pictures.qrc  (+1 more)
data_visualization_app/ARES/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
data_visualization_app/Doxygen/: Doxyfile
data_visualization_app/Doxygen/html/: BluetoothLogger_8cpp.html  BluetoothLogger_8cpp_8o_8d.html  BluetoothLogger_8cpp_8o_8d_source.html  BluetoothLogger_8cpp__incl.map  BluetoothLogger_8cpp__incl.md5  BluetoothLogger_8cpp_source.html  BluetoothLogger_8h.html  BluetoothLogger_8h.js  BluetoothLogger_8h__dep__incl.map  BluetoothLogger_8h__dep__incl.md5  BluetoothLogger_8h__incl.map  BluetoothLogger_8h__incl.md5  BluetoothLogger_8h_source.html  BluetoothManager_8cpp.html  BluetoothManager_8cpp_8o_8d.html  BluetoothManager_8cpp_8o_8d_source.html  BluetoothManager_8cpp__incl.map  BluetoothManager_8cpp__incl.md5  BluetoothManager_8cpp_source.html  BluetoothManager_8h.html  BluetoothManager_8h.js  BluetoothManager_8h__dep__incl.map  BluetoothManager_8h__dep__incl.md5  BluetoothManager_8h__incl.map  BluetoothManager_8h__incl.md5  BluetoothManager_8h_source.html  BluetoothScanner_8cpp.html  BluetoothScanner_8cpp_8o_8d.html  BluetoothScanner_8cpp_8o_8d_source.html  BluetoothScanner_8cpp__incl.map  BluetoothScanner_8cpp__incl.md5  BluetoothScanner_8cpp_source.html  BluetoothScanner_8h.html  BluetoothScanner_8h.js  BluetoothScanner_8h__dep__incl.map  BluetoothScanner_8h__dep__incl.md5  BluetoothScanner_8h__incl.map  BluetoothScanner_8h__incl.md5  BluetoothScanner_8h_source.html  CMakeCXXCompilerId_8cpp.html  (+409 more)
data_visualization_app/Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_7.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  (+22 more)
data_visualization_app/Doxygen/latex/: BluetoothLogger_8cpp.tex  BluetoothLogger_8cpp_8o_8d.tex  BluetoothLogger_8cpp_8o_8d_source.tex  BluetoothLogger_8cpp__incl.md5  BluetoothLogger_8cpp_source.tex  BluetoothLogger_8h.tex  BluetoothLogger_8h__dep__incl.md5  BluetoothLogger_8h__incl.md5  BluetoothLogger_8h_source.tex  BluetoothManager_8cpp.tex  BluetoothManager_8cpp_8o_8d.tex  BluetoothManager_8cpp_8o_8d_source.tex  BluetoothManager_8cpp__incl.md5  BluetoothManager_8cpp_source.tex  BluetoothManager_8h.tex  BluetoothManager_8h__dep__incl.md5  BluetoothManager_8h__incl.md5  BluetoothManager_8h_source.tex  BluetoothScanner_8cpp.tex  BluetoothScanner_8cpp_8o_8d.tex  BluetoothScanner_8cpp_8o_8d_source.tex  BluetoothScanner_8cpp__incl.md5  BluetoothScanner_8cpp_source.tex  BluetoothScanner_8h.tex  BluetoothScanner_8h__dep__incl.md5  BluetoothScanner_8h__incl.md5  BluetoothScanner_8h_source.tex  CMakeCXXCompilerId_8cpp.tex  CMakeCXXCompilerId_8cpp_source.tex  LineChart_8cpp.tex  LineChart_8cpp_8o_8d.tex  LineChart_8cpp_8o_8d_source.tex  LineChart_8cpp__incl.md5  LineChart_8cpp_source.tex  LineChart_8h.tex  LineChart_8h__dep__incl.md5  LineChart_8h__incl.md5  LineChart_8h_source.tex  MainWindow_8cpp.tex  MainWindow_8cpp_8o_8d.tex  (+176 more)
data_visualization_app/inc/: BluetoothLogger.hpp  BluetoothScanner.hpp  LineChart.hpp  MainWindow.hpp  MotorArrowWidget.hpp  RobotDiagram.hpp  RobotPicture.h  RotatedLabel.hpp  TofChart.hpp  TofConeWidget.hpp  TrajectoryWidget.hpp
data_visualization_app/src/: BluetoothLogger.cpp  BluetoothManager.cpp  BluetoothScanner.cpp  LineChart.cpp  MainWindow.cpp  MotorArrowWidget.cpp  RobotDiagram.cpp  RobotPicture.cpp  RotatedLabel.cpp  TofChart.cpp  TofConeWidget.cpp  TrajectoryWidget.cpp  main.cpp
data_visualization_app/ui/: BluetoothLogger.ui  BluetoothScanner.ui  MainWindow.ui  RobotDiagram.ui  RobotPicture.ui  TofChart.ui
electronics/: .gitignore  ARES.PrjPcb  ARES.PrjPcbStructure  IR_Sensor_Block.SchDoc  Job1.OutJob  Line_Sensor.SchDoc  Main_board.SchDoc  Motor_driver.SchDoc  PCB.PcbDoc  Raspberry_main.SchDoc  Serwo.SchDoc  Starter.SchDoc
mechanics/: forma_do_kół.ipt  góra_robota.ipt  koło.ipt  minisumo_złożenie.iam  obciążenie_dół.ipt  obudowa_robota.ipt  opona.ipt  pług_część1.ipt  pług_część2.ipt  płytka_pcb.ipt
mechanics/OldVersions/: koło.0001.ipt  koło.0004.ipt  minisumo_złożenie.0002.iam  obciążenie_dół.0003.ipt  obudowa_robota.0004.ipt  pług_część1.0004.ipt  pług_część2.0004.ipt  płytka_pcb.0002.ipt
mechanics/stl_files/: forma_do_kół.stl  góra_robota.stl  koło.stl  obudowa_robota.stl  pług_część1.stl  pług_część2.stl
ros2/src/ARES_robot_model/: package.xml  setup.cfg  setup.py
ros2/src/ARES_robot_model/config/: gz_bridge.yaml
ros2/src/ARES_robot_model/launch/: display.launch.py  gazebo.launch.py
ros2/src/ARES_robot_model/meshes/: body.STL  wheel.STL
ros2/src/ARES_robot_model/rviz/: ARES_display.rviz  ARES_model.rviz
ros2/src/ARES_robot_model/urdf/: configurations.gazebo.xml  differential_drive.gazebo.xml  lidar.gazebo.xml  robot.urdf.xacro
software/: CMakeLists.txt  minisumo.gatt
software/inc/: bluetooth_connection.h  btstack_config.h  controller.h  distance_sensor.h  lineDetectors.h  line_detectors.h  motors.h  sensorsIR.h  serwo.h  starter.h
(+10 files in other folders)
